# HIPhotonCluster

./: .gitignore
algoTesting/: HIJINGTEST.ipynb  Inclusive.ipynb  PiTest.ipynb  SingleTest.ipynb  algos.ipynb  root2DataFrame.py
analysis/: ClusterPlotter.C  DrawClusters.C  DrawDecay.C  HIClusE.C  IDsingle.C  Pi0Decay.C  PromptRatio.C  aTest.C  anadata.root  btowerData.root  compareData.C  hipythana.root  iddata.root  singleClusE.C  stowerData.root  towerData.root
burners/: AllClusBurner.C  AllClusBurner.h  AllClusBurnerLinkDef.h  ChaseTower.C  ChaseTower.h  ChaseTowerLinkDef.h  GammaClusBurner.C  GammaClusBurner.h  GammaClusBurnerLinkDef.h  GammaLocal.C  GammaLocal.h  GammaLocalLinkDef.h  IDBurner.C  IDBurner.h  IDBurnerLinkDef.h  Makefile.am  SubtractedClusterBurner.C  SubtractedClusterBurner.h  TowerMap.C  TowerMap.h  TowerMapLinkDef.h  configure.in
clustering/: Makefile.am  RawClusterBuilderTemplate.cc  RawClusterBuilderTemplateSub.cc  RawClusterBuilderTemplateSub.cc~  RawClusterBuilderTemplateSub.h  RawClusterBuilderTemplateSub.lo  RawClusterBuilderTemplateSubLinkDef.h  RawClusterBuilderTemplateSub_Dict.cc  RawClusterBuilderTemplateSub_Dict.h  RawClusterBuilderTemplateSub_Dict.lo  RawClusterPositionCorrection.cc  RawTowerCalibration.cc
condor/: CondorBack.csh  CondorBurner.csh  CondorPythia.csh  CondorSignal.csh  FLOW_ANA.csh  FlowCondor.csh  GetFileName.csh  HITest.csh  HI_ANA.csh  HI_DST_Condor.csh  InternalBackground.csh  InternalGen.csh  Lo2.csh  Lo3.csh  Lo4.csh  LoDVP.csh  LoInternal.csh  LoNoHI.csh  LoNoSub.csh  LoSolo.csh  LocalTest.csh  PythiaHIANA.csh  PythiaHICondor.csh  burnerMacro.C  makeAll.csh  pythMacro.C  submit_ANA  submit_Back  submit_DVPTest  submit_Flow  submit_FlowAna  submit_HI  submit_IB  submit_Internal  submit_NoHI  submit_NoSub  submit_PythHI  submit_PythHIANA  submit_Pythia  submit_Signal  (+6 more)
pythia/: Makefile  minBiasGen.cc  photonJetGenerator.cc
subtraction/: Makefile.am  SubtractCEMC.C  SubtractCEMC.C~  SubtractCEMC.h  SubtractCEMC.lo  SubtractCEMCLinkDef.h  SubtractCEMC_Dict.C  SubtractCEMC_Dict.h  SubtractCEMC_Dict.lo  configure.in
