AC_INIT(configure.in)

AM_INIT_AUTOMAKE(Subtraction, 1.00)
AC_PROG_CXX(CC g++)
AC_ENABLE_STATIC(no)
LT_INIT

if test $ac_cv_prog_gxx = yes; then
  CXXFLAGS="$CXXFLAGS -Wall -Werror"
fi

ROOTLIBS=`root-config --libs`
AC_SUBST(ROOTLIBS)

AM_CONDITIONAL([MAKEROOT6],[test `root-config --version | awk '{print $1>=6.?"1":"0"}'` = 1])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
